chore: format swagger
